--- a/custom_users/templates/custom_users/organisaties.html
+++ b/custom_users/templates/custom_users/organisaties.html
@@ -22,7 +22,7 @@
             </div> <!--col-sm-3-->
 
             <section id="wat" class="content1-3">
-                <div class="container">
+                <div class="panel panel-body">
                         <div class = "col-md-3"> </div>
                         <div class="col-md-9">
                             <div class="about-content">
@@ -36,7 +36,7 @@ Doorverwijzing: voor vragen die niet behandeld kunnen worden door de Wetenschaps
                 </div>
             </section>
             <section id="aanmerking" class="content1-3">
-            <div class="container">
+            <div class="panel panel-body">
                     <div class = "col-md-3"> </div>
                     <div class="col-md-9">
                         <div class="about-content">
@@ -54,7 +54,7 @@ Vragen van KMO's of van overheidsinstanties: worden behandeld als ze niet in aan
             </div>
         </section>
         <section id="indienen" class="content1-3">
-            <div class="container">
+            <div class="panel panel-body">
                     <div class = "col-md-3"> </div>
                     <div class="col-md-9">
                         <div class="about-content">
@@ -70,7 +70,7 @@ Tijdens het voorbije decennium kregen tientallen organisaties al een antwoord op
             </div>
         </section>
         <section id="stappenplan" class="content1-3">
-            <div class="container">
+            <div class="panel panel-body">
                     <div class = "col-md-3"> </div>
                     <div class="col-md-9">
                         <div class="about-content">
@@ -90,27 +90,26 @@ Indien het onderzoek de omvang van studentenonderzoek overstijgt, wordt doorverw
         </section>
 
         <section id="verwacht" class="content1-3">
-            <div class="container">
+            <div class="panel panel-body">
                     <div class = "col-md-3"> </div>
                     <div class="col-md-9">
                         <div class="about-content">
-                            {% placeholder "Wat wordt er verwacht?" %}
-                        </div>
-                    </div>
-            </div>
-        </section>
-        <section id="kostprijs" class="content1-3">
-        <div class="container">
-                <div class = "col-md-3"> </div>
-                <div class="col-md-9">
-                    <div class="about-content">
-                        Van de aanvrager wordt verwacht dat die:
+                             Van de aanvrager wordt verwacht dat die:
 
 Voldoende inhoudelijke input geeft om de onderzoeksvraag af te bakenen.
 Onderzoeksmateriaal aanlevert.
 Voldoende tijd, menskracht en indien nodig faciliteiten beschikbaar stelt voor het onderzoek.
 Deelneemt aan de startvergadering aan het begin van het onderzoek.
 Na afronding van het onderzoek de overeengekomen financiële bijdrage levert (indien een kostenbegroting werd opgemaakt).
+                        </div>
+                    </div>
+            </div>
+        </section>
+        <section id="kostprijs" class="content1-3">
+        <div class="panel panel-body">
+                <div class = "col-md-3"> </div>
+                <div class="col-md-9">
+                    <div class="about-content">
                         Aangezien de Wetenschapswinkel zich richt tot non-profitorganisaties, proberen we de kosten uiteraard zo laag mogelijk te houden.
                     </div>
                 </div>
