--- a/custom_users/templates/custom_users/studenten.html
+++ b/custom_users/templates/custom_users/studenten.html
@@ -24,7 +24,7 @@
                 </div> <!--well bs-sidebar affix-->
 
             <section id="wat" class="content1-3">
-                <div class="container">
+                <div class="panel panel-body">
                     <div class = "col-md-3"> </div>
                         <div class="col-md-9">
                             <div class="about-content">
@@ -37,7 +37,7 @@ De onderzoeksvraag van een non-profitorganisatie vormt de probleemstelling van h
             </section>
 
             <section id="waarom" class="content1-3">
-                <div class="container">
+                <div class="panel panel-body">
                         <div class = "col-md-3"> </div>
                         <div class="col-md-9">
                             <div class="about-content">
@@ -65,7 +65,7 @@ De resultaten van je masterproefonderzoek kunnen openbaar gemaakt worden in de v
             </section>
 
          <section id="hoe" class="content1-3">
-                <div class="container">
+                <div class="panel panel-body">
                         <div class = "col-md-3"> </div>
                         <div class="col-md-9">
                             <div class="about-content">
@@ -80,7 +80,7 @@ Voor meer inhoudelijke informatie over de onderwerpen kan je contact opnemen met
             </section>
 
          <section id="stappenplan" class="content1-3">
-                <div class="container">
+                <div class="panel panel-body">
                         <div class = "col-md-3"> </div>
                         <div class="col-md-9">
                             <div class="about-content">
