--- a/custom_users/templates/custom_users/partners.html
+++ b/custom_users/templates/custom_users/partners.html
@@ -21,13 +21,15 @@
 
 
     <section id="cera" class="content1-3">
-        <div class="container">
+        <div class="panel panel-body">
             <div class = "col-md-3"> </div>
                 <div class="col-md-9">
                     <div class="about-content">
-                    {% placeholder "Partner1" %}
+                    Cera Award vertoont veel gelijkenissen met de Wetenschapswinkel in die zin dat het ook onderzoeksvragen voor studenten genereert bij socialprofitorganisaties. Maar daar waar de Wetenschapswinkel vooral focust op studenten uit humane wetenschappen (agogiek, psychologie, communicatiewetenschappen...) richt Cera Award zijn pijlen op ingenieursstudenten en technische bachelors.
+Net als bedrijven voelen sociale organisaties steeds meer druk om 'mee' te zijn en worden ze geconfronteerd met technologisch-wetenschappelijke uitdagingen. Helaas beschikken ze niet altijd over de kennis om vereiste vernieuwingen door te voeren. Ingenieursstudenten en technische bachelors hebben die techn(olog)isch-wetenschappelijke kennis welen zoeken vaak een maatschappelijk relevant onderwerp voor hun eindwerk.
+Cera Award maakt de link tussen een techn(olog)isch of wetenschappelijke onderzoeksvraag binnen een socialprofitorganisatie en het eindwerk van een student. Meer informatie vind je op de gloednieuwe Cera Award-website.
                         <div class = "container">
-                           {% placeholder "partner-img1" %}
+                           <img src="http://www.wetenschapswinkel.be/Afbeeldingen/ceraaward.jpg" alt="Cera" class="image" style="width:100%">
                         </div>
 
                 </div>
@@ -35,27 +37,39 @@
         </div>
     </section>
        <section id="living" class="content1-3">
-        <div class="container">
+        <div class="panel panel-body">
             <div class = "col-md-3"> </div>
                 <div class="col-md-9">
                     <div class="about-content">
-                    {% placeholder "Partner2" %}
-                        <div class = "container">
-                           {% placeholder "partner-img2" %}
-                        </div>
+                    De Wetenschapswinkel Brussel maakt deel uit van het internationale Wetenschapswinkelnetwerk, het Living Knowledge Network (LK), dat burgers toegang wil geven tot academisch onderzoek. Iedereen die interesse heeft in het bouwen van bruggen tussen publiek en onderzoek kan erin terecht. Leden wisselen informatie, documentatie, ideeën, ervaringen en expertise uit over ‘community-based research’ en ‘science & society’-relaties in het algemeen. Die LK-communicatie verloopt via verschillende kanalen:
 
+LK-Nieuws- & Discussielijst
+Houdt je op de hoogte van ontwikkelingen op het vlak van publieke toegang tot onderzoek. Discussietopics zijn nieuws, methoden, financieringsstrategieën, uitwisseling van expertise, aankondigingen van conferenties, versterken van een internationaal netwerk dat publieke toegang tot onderzoek bevordert.
+
+LK-Nieuwsbrief
+Is bedoeld als link tussen de bovenstaande Discussielijst (met beknopte informatie en de discussies die op dat moment gevoerd worden) en de LK-Journal met gedetailleerde verslagen en artikels over de stand van comunity based research-zaken.
+
+LK-Magazine
+De officiële publicatie van het LK-netwerk, jaarlijks sinds augustus 2005. Verspreidt informatieve artikels over het huidige debat over Wetenschapswinkels en andere community based research-zaken.
+
+LK-conferenties
+Om de twee jaar organiseert het Netwerk een grootse conferentie. De zesde op rij vond plaats van 9 tot 11 april 2014 in Kopenhagen. Het programma met de titel “An Innovative Civil Society: Impact through Co-creation and Participation” focuste zich op thema’s als het versterken van civil society organisaties, duurzame ontwikkeling, gemeenschapsgeorganiseerd onderzoek en sociale innovatie. De volgende LK-conferentie zal plaatsvinden op 22, 23 en 24 juni 2016 in Dublin, Ierland met als thema: “Inspire – Integrating community based partnership into learning and teaching for responsible research and innovation (RRI).
+Wil je lid worden van of meer informatie over het LK-netwerk?
+http://www.livingknowledge.org/livingknowledge/
                 </div>
             </div>
         </div>
     </section>
        <section id="perares" class="content1-3">
-        <div class="container">
+        <div class="panel panel-body">
             <div class = "col-md-3"> </div>
                 <div class="col-md-9">
                     <div class="about-content">
-                    {% placeholder "Partner3" %}
+                    Op 1 mei 2010 ging het vierjarige Science Shop-project van start waarvan de Brusselse Wetenschapswinkel deel uitmaakt. PERARES staat voor Public Engagement with Research and Research Engagement with Society en moet de interactie tussen onderzoekers, non-profitorganisaties en burgers in Europa versterken.
+Samen met 25 andere partners uit 17 Europese landen (andere Science Shops, non-profitorganisaties, universiteiten...) organiseerde de Brusselse Wetenschapswinkel o.a. transnationale onlinedebatten over wetenschappelijk onderzoek. De coördinatie van PERARES gebeurde vanuit de Rijksuniversiteit van Groningen (RUG).
+Naast de versterking van het Europese Wetenschapswinkelnetwerk moest PERARES leiden tot de opstart van nieuwe Wetenschapswinkels en het bewijs dat het maatschappelijke middenveld onderzoeksagenda's kan beïnvloeden.
                         <div class = "container">
-                           {% placeholder "partner-img3" %}
+                           <img src="http://www.wetenschapswinkel.be/Afbeeldingen/Perares.png" alt="Perares" class="image" style="width:100%">
                         </div>
 
                 </div>
@@ -63,13 +77,14 @@
         </div>
     </section>
        <section id="enrich" class="content1-3">
-        <div class="container">
+        <div class="panel panel-body">
             <div class = "col-md-3"> </div>
                 <div class="col-md-9">
                     <div class="about-content">
-                    {% placeholder "Partner6" %}
+                    Van 2015 tot 2017 coördineert de Brusselse Wetenschapswinkel een Europees “Science With And For Society” project met 13 Europese partners. EnRRICH of “Enhancing Responsible Research and Innovation through Curricula in Higher Education” wil de maatschappij meer betrekken in het hoger onderwijs en zo “Responsible Research and Innovation” aanmoedigen bij studenten en onderzoekers. EnRRICH bouwt deels verder op eerdere succesvolle Europese projecten waarin Wtnschp partner was: TRAMS (Training and Mentoring of Science Shops, 2005-2008) en PERARES (Public Engagement with Research an research Engagement with Society, 2010-2014).
                         <div class = "container">
-                           {% placeholder "partner-img6" %}
+                           <img src="http://www.wetenschapswinkel.be/IMG/EUcommissie.gif" alt="EUcom" class="image" style="width:100%">
+                            <img src="http://www.wetenschapswinkel.be/IMG/ENRRICH.jpg" alt="Enrich" class="image" style="width:100%">
                         </div>
 
                 </div>
@@ -77,27 +92,43 @@
         </div>
     </section>
        <section id="wetenschapswinkel" class="content1-3">
-        <div class="container">
+        <div class="panel panel-body">
             <div class = "col-md-3"> </div>
                 <div class="col-md-9">
                     <div class="about-content">
-                    {% placeholder "Partner4" %}
-                        <div class = "container">
-                           {% placeholder "partner-img4" %}
-                        </div>
+                    De Wetenschapswinkeltraditie is afkomstig uit Nederland. Sinds de jaren zeventig laten onderzoekers en deskundige bemiddelaars zich daar inspireren door signalen uit de samenleving.
 
+Momenteel beschikken zeven universiteiten in Nederland over één of meerdere Wetenschapswinkels. Sommige Wetenschapswinkels behandelen aanvragen op één bepaald expertisegebied, bijvoorbeeld biologie of economie. Andere Wetenschapswinkels zijn -zoals de Vlaamse- meer algemeen en vertegenwoordigen meerdere expertisegebieden uit één universiteit.
+
+Elke zes maanden komen de Vlaamse en Nederlandse Wetenschapswinkels samen om informatie uit te wisselen, inspiratie op te doen etc. Elke twee jaar reiken ze daarnaast samen de Interlandse WetenschapswinkelPrijs uit aan een opmerkelijk Vlaams of Nederlands studentenonderzoek in samenwerking met een non-profitorganisatie.
+
+De laatste Prijs werd uitgereikt aan de UAntwerpen in december 2012 en ging naar Ruurd van der Meer, voor zijn onderzoek over ballastwater in opdracht van het Centrum voor Energie en Milieukunde, IVEM. Aangezien hij een student is aan de Rijksuniversiteit Groningen, vindt daar de volgende Prijsuitreiking plaats, eind november 2014.
+
+
+Meer weten over de Nederlandse Wetenschapswinkels? http://www.wetenschapswinkels.nl/home.html
                 </div>
             </div>
         </div>
     </section>
        <section id="scriptie" class="content1-3">
-        <div class="container">
+        <div class="panel panel-body">
             <div class = "col-md-3"> </div>
                 <div class="col-md-9">
                     <div class="about-content">
-                    {% placeholder "Partner5" %}
+                    Pluk de vruchten van je scriptie!
+
+Doe mee aan de Vlaamse Scriptieprijs en win 2.500 euro. Schrijf een journalistiek artikel over jouw bachelor- of masterproef, upload dit vervolgens samen met je scriptie op de VlaamseScriptieprijs-website. Voor de editie van 2015 is de inschrijving helaas gesloten, maar in het najaar 2016 kan je opnieuw meedingen naar de prijzen.
+
+Daarnaast organiseren het Departement internationaal Vlaanderen en Scriptie vzw de Scriptieprijs 100 Jaar Groote Oorlog. De prijs zal gedurende vijf jaar bachelor- en masterproeven over WO I in kaart brengen en bekronen. Alle info over dit initiatief vind je op de projectwebsite www.scriptieprijs2014-18.be.
+
+Afgestudeerd, scriptie in de krant?
+
+Wij brengen je scriptie onder de aandacht van de pers. Bovendien komt je eindwerk in de online Scriptiebank terecht, een visitekaartje voor je beginnende carrière!
+
+Meer info: www.scriptieprijs.be
+Volg de Vlaamse Scriptieprijs op facebook en twitter!
                         <div class = "container">
-                           {% placeholder "partner-img5" %}
+                            <img src="http://www.wetenschapswinkel.be/IMG/scriptieprijs.png" alt="scriptie" class="image" style="width:100%">
                         </div>
                 </div>
             </div>
